Tue Dec 16 00:08:33 1997  Tom Yu  <tlyu@mit.edu>

	* mk_req_ext.c (krb5_mk_req_extended): Check enctype of session
	key, not that of the ticket, which we really shouldn't care about.

Sun Dec  7 07:24:23 1997  Ezra Peisach  <epeisach@dumpster.rose.brandeis.edu>

	* gic_pwd.c (krb5_get_init_creds_password): Change fourth argument
 	in call to prompter (which is an int) from NULL to 0.

Sat Dec  6 02:28:17 1997  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Add files chpw.c, gic_*, preauth2.c, vfy_increds.c,
	vic_opt.c.

	* chpw.c: New file; implement Cygnus chpw.

	* get_in_tkt.c: Implement support for Cygnus initial credentials
	API.

	* gic_keytab.c: New file; Cygnus initial creds.

	* gic_opt.c: New file; Cygnus initial creds.

	* gic_pwd.c: New file; Cygnus initial creds.

	* preauth.c: Add more SAM support (from Cygnus).

	* preauth2.c: New file; additional SAM support from Cygnus.

	* send_tgs.c: Account for additional parameter to sendto_kdc.

	* vfy_increds.c: New file; Cygnus initial creds.

	* vic_opt.c: New file; Cygnus initial creds.

Wed Oct 22 00:29:33 1997  Theodore Y. Ts'o  <tytso@mit.edu>

	* send_tgs.c (krb5_send_tgs): Don't send a zero endtime; if the
		requested endtime is zero, set it equal to the TGT endtime.

Mon Oct  6 12:07:19 1997  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* set_realm.c (krb5_set_principal_realm): Allocate extra byte for
	        \0 after realm.

Mon Sep  1 21:38:16 1997  Tom Yu  <tlyu@mit.edu>

	* rd_cred.c (krb5_rd_cred_basic): Fix swapped args to memset.

Fri Aug 29 16:41:25 1997  Tom Yu  <tlyu@mit.edu>

	* get_in_tkt.c (krb5_get_in_tkt): Move nulling out of
	request.padata before the os_localaddr call in order to avoid
	freeing a null pointer in the cleanup code.

Tue Aug 12 09:13:22 1997  Ezra Peisach  <epeisach@mit.edu>

	* init_ctx.c (krb5_init_context): Initialize local variable ctx
	 	before calling krb5_init_ets.

Fri Aug  8 17:04:54 1997  Tom Yu  <tlyu@mit.edu>
